--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <version>2.0.5</version>
     </parent>
     <groupId>edu.brandeis.lapps</groupId>
-    <artifactId>bioasq-datasource</artifactId>
+    <artifactId>genetag-datasource</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>GeneTag DataSource</name>
     <packaging>war</packaging>
@@ -25,7 +25,7 @@
     </properties>
 
 	<build>
-        <finalName>BioAsqDatasource#${project.version}</finalName>
+        <finalName>GeneTagDatasource#${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.anc.maven.plugins</groupId>
