--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <lapps.api.version>2.0.1</lapps.api.version>
         <lapps.core.version>2.0.2</lapps.core.version>
         <lapps.discriminator.version>2.3.0</lapps.discriminator.version>
-        <lapps.serialization.version>2.3.1</lapps.serialization.version>
+        <lapps.serialization.version>2.6.0-SNAPSHOT</lapps.serialization.version>
         <lapps.metadata.version>1.1.0</lapps.metadata.version>
         <java.version>1.8</java.version>
     </properties>
@@ -109,5 +109,18 @@
             <type>jar</type>
         </dependency>
     </dependencies>
-
+	
+	<repositories>
+		<repository>
+			<id>sonatype-snapshots</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+	
 </project>
