--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,10 @@
 
 	<properties>
         <lapps.api.version>2.0.1</lapps.api.version>
-        <lapps.core.version>2.0.2</lapps.core.version>
-        <lapps.discriminator.version>2.3.0</lapps.discriminator.version>
-        <lapps.serialization.version>2.6.0-SNAPSHOT</lapps.serialization.version>
-        <lapps.metadata.version>1.1.0</lapps.metadata.version>
+        <lapps.core.version>2.0.5</lapps.core.version>
+        <lapps.discriminator.version>2.3.2</lapps.discriminator.version>
+        <lapps.serialization.version>2.5.0</lapps.serialization.version>
+        <lapps.metadata.version>1.2.0</lapps.metadata.version>
         <java.version>1.8</java.version>
     </properties>
 
@@ -61,14 +61,14 @@
             <groupId>org.lappsgrid</groupId>
             <artifactId>discriminator</artifactId>
             <version>${lapps.discriminator.version}</version>
-            <type>jar</type>
-            <scope>compile</scope>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.lappsgrid</groupId>
             <artifactId>core</artifactId>
             <version>${lapps.core.version}</version>
         </dependency>
+        -->
         <dependency>
             <groupId>org.lappsgrid</groupId>
             <artifactId>api</artifactId>
@@ -84,12 +84,14 @@
             <artifactId>metadata</artifactId>
             <version>${lapps.metadata.version}</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.anc.json</groupId>
             <artifactId>validator</artifactId>
             <version>1.1.1</version>
             <scope>test</scope>
         </dependency>
+        -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
